--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cli-color": "^1.1.0",
     "compromise": "^7.0.28",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "express": "^4.15.3",
     "fast-levenshtein": "^1.1.3",
     "jszip": "^3.1.3",
