--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "crypto": "^1.0.1",
     "express": "^4.15.3",
     "fast-levenshtein": "^1.1.3",
+    "gtoken": "^2.3.0",
     "jszip": "^3.1.3",
     "languagedetect": "^1.1.1",
     "mime": "^1.3.4",
