--- a/package.json
+++ b/package.json
@@ -62,23 +62,30 @@
   "dependencies": {
     "@slack/client": "^3.5.1",
     "apiai": "^3.0.0",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "cli-color": "^1.1.0",
     "compromise": "^7.0.28",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "express": "^4.15.3",
     "fast-levenshtein": "^1.1.3",
     "gtoken": "^2.3.0",
+    "hash-sum": "^1.0.2",
+    "is-utf8": "^0.2.1",
     "jszip": "^3.1.3",
     "languagedetect": "^1.1.1",
+    "media-typer": "^0.3.0",
     "mime": "^1.3.4",
     "moment": "^2.13.0",
+    "multer": "^1.3.0",
     "nlp_compromise": "^6.5.3",
     "node-emoji": "^1.3.1",
     "node-telegram-bot-api": "^0.27.1",
+    "on-headers": "^1.0.1",
     "prettyjson": "^1.2.1",
     "qr-image": "^3.1.0",
+    "raw-body": "^2.3.3",
     "request": "^2.73.0",
     "rivescript": "1.17.1",
     "sanitize-filename": "^1.6.0",
